feat: new endpoint channels number - get all numbers used
